[package]
name = "typical90"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "1"
path = "src/1_yokan.rs"

[[bin]]
name = "2"
path = "src/2_parentheses.rs"

[[bin]]
name = "3"
path = "src/3_longest_circular_road.rs"

[[bin]]
name = "4"
path = "src/4_cross_sum.rs"

[[bin]]
name = "7"
path = "src/7_cp_classes.rs"

[[bin]]
name = "10"
path = "src/10_store_sum_queries.rs"

[[bin]]
name = "22"
path = "src/22_cubic_cake.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.5.0"
