[package]
name = "typical90"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "01"
path = "src/01_yokan.rs"

[[bin]]
name = "02"
path = "src/02_parentheses.rs"

[[bin]]
name = "03"
path = "src/03_longest_circular_road.rs"

[[bin]]
name = "04"
path = "src/04_cross_sum.rs"

[[bin]]
name = "07"
path = "src/07_cp_classes.rs"

[[bin]]
name = "08"
path = "src/08_at_counter.rs"

[[bin]]
name = "10"
path = "src/10_store_sum_queries.rs"

[[bin]]
name = "14"
path = "src/14_sing_together.rs"

[[bin]]
name = "16"
path = "src/16_min_coins.rs"

[[bin]]
name = "18"
path = "src/18_statue.rs"

[[bin]]
name = "20"
path = "src/20_log_inequality.rs"

[[bin]]
name = "22"
path = "src/22_cubic_cake.rs"

[[bin]]
name = "24"
path = "src/24_select_one.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.5.0"
